<resources>
    <string name="app_name">ProjetoMaxima</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ferramentas">Ferramentas</string>
    <string name="resumo_venda">Resumo de Vendas</string>
    <string name="pedidos">Pedidos</string>
    <string name="clientes">Clientes</string>
    <string name="title_activity_botton_nav_client">BottonNavClient</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_dados">Dados</string>
    <string name="title_hist_pedidos">Hist. Pedidos</string>
    <string name="title_alvaras">Alvarás</string>
    <string name="channel_name">Serviço Máxima</string>
    <string name="channel_description">DESCRIÇÃO DO CANAL</string>
    <string name="date">10/09/2018 17:24</string>
    <string name="status_cliente">Status ativo</string>
</resources>
