<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MenuPrincipal"
    android:background="@color/fundo_tela_cards">




    <GridLayout
        android:id="@+id/grid_menu_inicial"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:columnCount="2"
        android:rowCount="2"
               android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <!-- Row 1-->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_cliente"
            style="@style/Style_CardView"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="0"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical"
                >


                <ImageView
                    style="@style/Style_ImageView"
                    android:src="@mipmap/ic_maxima_pessoas"
                    />

                <TextView
                    android:id="@+id/txt_cliente"
                    style="@style/Style_TextView"
                    android:hint="@string/clientes" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_pedidos"
            style="@style/Style_CardView"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="1"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical"
                >


                <ImageView
                    style="@style/Style_ImageView"
                    android:src="@mipmap/ic_maxima_pedido" />

                <TextView
                    style="@style/Style_TextView"
                    android:hint="@string/pedidos" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_resumo_vendas"
            style="@style/Style_CardView"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="0"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">


                <ImageView
                    style="@style/Style_ImageView"
                    android:src="@mipmap/ic_maxima_resumo_vendas" />

                <TextView
                    style="@style/Style_TextView"
                    android:hint="@string/resumo_venda" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_ferramentas"
            style="@style/Style_CardView"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical"
                >


                <ImageView
                    style="@style/Style_ImageView"
                    android:src="@mipmap/ic_maxima_ferramentas" />

                <TextView
                    style="@style/Style_TextView"
                    android:hint="@string/ferramentas" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <!-- Row 2-->



    </GridLayout>

    <LinearLayout
        android:id="@+id/linear_conexao_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="1dp"
        >


        <TextView
            android:layout_marginRight="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="v.1.0.0"
            android:textSize="15dp"
            android:layout_gravity="center"/>
        <ImageView
            android:id="@+id/img_network"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:src="@mipmap/ic_maxima_nuvem_conectado"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>